fixed alignment for FacilityDetails card

--- a/src/pages/facilityDetails/facilityDetails.scss
+++ b/src/pages/facilityDetails/facilityDetails.scss
@@ -304,7 +304,6 @@
                                     color: gray;
                                     margin-right: 2%;
                                     font-size: 2vmin;
-                                    height: 100%;
                                 }
 
                                 .itemValue {
